# system_design_notes

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: blog_index.html  index.md
docs/00_system_design/: intro.md
docs/01_payment_system/: security.md
docs/20_smart_contracts/: blockchains_2024.md  firmar_contrato_digital.md  introduccion.md  test_smart_contracs.md
docs/api/: api_gateway.md  api_threat_modeling.md  performance.md
docs/blog/: post_001.md
docs/code_ownership/: README.md
docs/como_escalar_de_cero_a_millones_de_usuarios/: 01_section_escalamiento.md  02_section_estimacion.md
docs/db/: sharding_vs_partitioning.md
docs/design_a_key_value_store/: README.md
docs/engineering_positions/: production_engineer.md
docs/logging/: section_01.md
docs/performance/: intro.md
docs/stream_processing/: map_reduce_example_01.md  mapreduce.md
documentation/01_payment_system/: requerimientos.md
documentation/10_push_notification_system/: README.md  notification_system.md  section_01.md
documentation/21_ecommerce/: 01.md
documentation/architectures/: kappa_vs_lambda.md
documentation/azure/: README.md
documentation/como_escalar_de_cero_a_millones_de_usuarios/: 01_section_escalamiento.md
documentation/consistent_hashing/: README.md
documentation/design_a_key_value_store/: README.md  example_01.md
documentation/pinterest/: scalable_and_reliable_data_ingestion.md
documentation/system_design_from_book/: README.md
monorepo/: __main__.py  utils.py  version.py
monorepo/common/: constants.py  (+3 more)
tiers/: tier_cache.md
(+134 files in other folders)
