[tool.poetry]
name = "sdi"
description = "SDI monorepo"
authors = ["Jose Luis Alonzo Velazquez <pepemxl@gmail.com>", "Ernesto Ortega Trujillo <eortru@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pepemxl/system_design_notes.git"
version = "0.0.4"
packages = [ {include="monorepo"},
{ include="utils.py", from="monorepo"},
{ include="common", from="monorepo"},
]
[tool.poetry.dependencies]
python = "3.8.*"
termcolor = "^2.3.0"
pygments = "^2.15.1"
requests = "^2.31.0"
flatten-json = "^0.1.13"

[tool.poetry.group.dev.dependencies]
pytest = '*'
ipython = '*'
coverage = '*'
pre-commit = '*'

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.scripts]
sdi = 'monorepo.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"